PortalPackage/ Enrollment Rx Core/objects/Admissions_Document__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>ApplicantRecordId__c</fullName>
        <formula>Enrollment_Opportunity__r.Applicant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicantRecordId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <formula>Enrollment_Opportunity__r.Applicant__r.FirstName &amp; &quot; &quot; &amp; Enrollment_Opportunity__r.Applicant__r.LastName</formula>
        <label>Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocks_Admissions_Status__c</fullName>
        <description>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Admissions Status, fill this field out with the Status it should block.</description>
        <inlineHelpText>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Admissions Status, fill this field out with the Status it should block.</inlineHelpText>
        <label>Blocks Admissions Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocks_Financial_Aid_Status__c</fullName>
        <description>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Financial Aid Status, fill this field out with the Status it should block.</description>
        <inlineHelpText>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Financial Aid Status, fill this field out with the Status it should block.</inlineHelpText>
        <label>Blocks Financial Aid Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>ERx Custom Field</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>ERx Custom Field</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>ERx Custom Field</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>ERx Custom Field</description>
        <label>Document Name</label>
        <picklist>
            <picklistValues>
                <fullName>High School Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Diploma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Application ID</label>
        <referenceTo>Enrollment_Opportunity__c</referenceTo>
        <relationshipLabel>Admissions Documents Required</relationshipLabel>
        <relationshipName>R00N80000002jrltEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Other Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admissions Documents</relationshipLabel>
        <relationshipName>R00N80000002kRRnEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <type>TextArea</type>
    </fields>
    <label>Admissions Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Opportunity__c</columns>
        <columns>Applicant__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Status__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>AD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>